sumo/tests/netgen/grid/errors/grid_y_number__zero/options.netgen
--grid --grid.y-number=0 --grid.length=400 --output-file=net.net.xml
